// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component renders an anchor 1`] = `
.sx2te0w {
  background: unset;
  border: unset;
  padding: unset;
  color: var(--sx-colors-primary500);
  cursor: pointer;
  font-family: var(--sx-fonts-sans);
  text-decoration: none;
}

.sx2te0w:focus,
.sx2te0w:hover {
  color: var(--sx-colors-primary900);
  text-decoration: underline;
}

.sx2te0w:active {
  color: var(--sx-colors-primary500);
}

.sxfey5o .sx2te0w,
.sxe0tmj .sx2te0w {
  font-size: 100%;
  line-height: 1;
}

.sxfey5o .sx2te0w::before,
.sxfey5o .sx2te0w::after,
.sxe0tmj .sx2te0w::before,
.sxe0tmj .sx2te0w::after {
  content: none;
}

.sx2te0wjqqvr--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.625;
}

.sx2te0wjqqvr--size-md::before {
  content: '';
  margin-bottom: -0.4489em;
  display: table;
}

.sx2te0wjqqvr--size-md::after {
  content: '';
  margin-top: -0.4489em;
  display: table;
}

<div>
  <a
    class="sx2te0w sx2te0wjqqvr--size-md"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;

exports[`Link component renders an large anchor 1`] = `
.sx2te0w {
  background: unset;
  border: unset;
  padding: unset;
  color: var(--sx-colors-primary500);
  cursor: pointer;
  font-family: var(--sx-fonts-sans);
  text-decoration: none;
}

.sx2te0w:focus,
.sx2te0w:hover {
  color: var(--sx-colors-primary900);
  text-decoration: underline;
}

.sx2te0w:active {
  color: var(--sx-colors-primary500);
}

.sxfey5o .sx2te0w,
.sxe0tmj .sx2te0w {
  font-size: 100%;
  line-height: 1;
}

.sxfey5o .sx2te0w::before,
.sxfey5o .sx2te0w::after,
.sxe0tmj .sx2te0w::before,
.sxe0tmj .sx2te0w::after {
  content: none;
}

.sx2te0wjqqvr--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.625;
}

.sx2te0wjqqvr--size-md::before {
  content: '';
  margin-bottom: -0.4489em;
  display: table;
}

.sx2te0wjqqvr--size-md::after {
  content: '';
  margin-top: -0.4489em;
  display: table;
}

.sx2te0wg0h8h--size-lg {
  font-size: var(--sx-fontSizes-lg);
  line-height: 1.52;
}

.sx2te0wg0h8h--size-lg::before {
  content: '';
  margin-bottom: -0.3983em;
  display: table;
}

.sx2te0wg0h8h--size-lg::after {
  content: '';
  margin-top: -0.3983em;
  display: table;
}

<div>
  <a
    class="sx2te0w sx2te0wg0h8h--size-lg"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;
